# bevy-jam-2

./: .gitpod.yml  Cargo.toml  bevy_game.js  gitpod.Dockerfile  index.html  wasm-launcher-2f26db7227728530.js  wasm-launcher-6a9ec87199365289.js  wasm-launcher-c7bfdd4e2791da13.js  wasm-launcher-c98b8ed24fbfe472.js  wasm-launcher-df214b578e664236.js  wasm-launcher-e15d99f401af6919.js  wasm-launcher-eee1a6f0d1746b49.js  wasm-launcher-f1d15b7c9504b4be.js  wasm-launcher-fd3cb7135cf8476c.js
.github/workflows/: build.yml  release-gh-pages.yml  release-native.yml
assets/: LICENSE  characters.blend  characters.blend1  level-test.ldtk  test.ink  tileset.blend  tileset.blend1  tileset.glb  tileset.model  tileset.psd
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
src/: audio.rs  camera.rs  interactive_narrative.rs  level.rs  lib.rs  loading_state.rs  menu.rs  physics.rs  player.rs  player_actions.rs  spirit.rs  spirit_collection.rs  states.rs  theme.rs
src/ink/: ink_asset.rs  ink_story.rs  mod.rs
